initial commit for clarat-org/clarat#1062 - enabled farsi in frontend and pulled localeapp

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -890,14 +890,6 @@ fa:
           text: صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم یا اینکه چیزی به درستی انجام نمی شود؟پس
         unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
       nav_lang:
-        languages:
-          ar: 
-          de: 
-          en: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
         legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
@@ -929,6 +921,10 @@ fa:
               family: با صفحه <span class="top-bar__emphasis">clarat refugees</span> تعویض کردن
               refugees: با صفحه <span class="top-bar__emphasis">clarat family</span> تعویض کردن
         title: زبان خود را انتخاب کنید
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
   offers:
     index:
       filters:
@@ -1053,6 +1049,7 @@ fa:
         La Prima Estate از Erlend Oye می باشد.
       andrea: او در رشته مدیریت بین فرهنگی تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی درمورد اقتصاد و قرهنگ دارد.او دقیق کار می کند.در clarat در تیم تحقیق فعالیت دارد و نگاه کلی در مورد موضوع دنیای خانواده دارد.موسیقی دوست داشتنی اوWork Me از The Black Keys می باشد.
       anja: او مهندس و در رشته اکولوژی تحصیل کرده است.او می تواند منطقی و سریع فکر کند.در clarat در تیم تحقیق فعالیت دارد و ما را از کیفیت کارها مطمئن می کند.موسیقی دوست داشتنی او Where is my mind از den Pixies می باشد.
+      ann-sophie: 
       anna: او کارشناس رشته لغت‌شناسی است.این بدین معنی است اودر مورد زبانهای مختلف اطلاعات زیادی دارد و با ادبیات آشنایی دارد.او می تواند به خوبی مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت دارد.موسیقی مورد علاقه او 1009 از Bonobo می باشد.
       anne: او در رشته اقتصاد و روابط بین الملل تحصیل کرده است.او می تواند سریع منطقی فکر کند.در clarat او رئیس است.او وظیفه تمام تیم را بر عهده گرفته است و همه چیز را ساز مان دهی می کند.موسیقی مورد علاقه اوDenken Sie Groß از Deichkind می باشد.
       astrid: او کارشناس رشته سیاست است.این بدین معنی است که او اطلاعات زیادی درباره سیاست و اجتماع دارد.او با انرژی مثبت و انتقال آن به دیگران در clarat در تیم تحقیق فعالیت دارد و در اینترنت به دنبال سازمان های مختلف میگردد.موسیقی مورد علاقه او You Got Meاز The Roots می باشد.
@@ -1063,9 +1060,11 @@ fa:
       birte: او در رشته تربیت کودکان تحصیل کرده است.او از رابطه با کودکان آگاهی زیادی دارد و می تواند به خوبی خود را در شرایط دیگران قرار دهد.او همچنین برای رسانه هم بسیار کار کرده است و در clarat در تیم تحقیق فعالیت دارد .موسیقی مورد علاقه او Borderline از Madonna می باشد.
       chrissy: او کارشناس رشته اقتصاد است .این بدین معنی است که او اطلاع زیادی در مورد سیاست و اجتماع دارد.او می تواند به به خوبی برنامه ریزی و نظم برقرار کند.در clarat در تیم تحقیق فعالیت دارد و در اینترنت بدنبال سازمانهای مختلف می گردد.موسیقی مورد علاقه او Rough Hands از Alexisonfire می باشد.
       claudia: او قبل از clarat در قسمت فروش کار کرده است.او به خوبی با آدمها معاشرت میکند و به سرعت اطلاعات جمع آوری می کند.در clarat در تیم تحقیق فعالیت دارد و به متقاضیان ما کمک می کند.موسیقی مور علاقه اوChandelier از Sia می باشد.
+      damjan: 
       eleonore: او در رشته موسیقی٬ رسانه و اقتصاد تحصیل کرده است.او در جمع آوری اطلاعات سرعت و درک زیادی دارد.در clarat در تیم تحقیق فعالیت دارد و در صحیح جستجو کردن clarat در اینترنت به متقاضیان کمک می کند.موسیقی مورد علاقه او Je Veux از Zaz می باشد.
       elisa: او کارشناس در رشته مطالعات فرهنگی است.این بدین معنی است که تو اطلاعات زیادی در مورد فرهنگهای مختلف دارد.او می تواند مسائل پیچیده را به راحتی توضیح  دهد.در clarat در تیم تحقیق فعالیت دارد و در برقراری نظم در صفحه اینترنتی ما فعالیت دارد.موسیقی مورد علاقه او Boat Behind از Kings of Convenience می باشد.
       esther: او در رشته مطالعات فرهنگی تحصیل کرده است.در رشته سیاست و تاریخ آشنایی آگاهی زیادی دارد و به سرعت چیزهای جدید را یاد می گیرد.در clarat در تیم تحقیق فعالیت دارد و در زمینه کتاب مرجع فرهنگ زبان فعالیت دارد.موسیقی مورد علاقه او This charming man از The Smiths می باشد.
+      fabian: 
       franziska: او کارشناس حقوق بین‌الملل است.این بدین معنی می باشد که او اطلاعات زیادی در مورد قوانین مشترک ملتها دارد و می تواند مسائل پیچیده به خوبی درک و به سرعت راه حل پیدا کند..در clarat در تیم تحقیق فعالیت دارد.موسیقی مورد علاقه او Explanations از Selah Sue می باشد.
       hassan: او در زمینه مترجمی زبان فارسی فعالیت کرده است و زبان فارسی زبان مادری او می باشد.او سرعت بالا و سازماندهی خوبی دارد.در کلارات در تیم مترجمی مشغول و وظیفه ترجمه کلارات به زبان فارسی را دارد.موسیقی مورد علاقه او Looking For The Summer از Chris Rea می باشد.
       heading: چه کسانی در clarat فعالیت دارند؟
@@ -1079,10 +1078,8 @@ fa:
       jule: او محقق در مسائل صلح و مناقشه می باشد.این بدین معنی است که او اطلاعات زیادی در مورد جنگ و تنش مربوط به آن دارد.او به خوبی راه حل پیدا می کند.در clarat در تیم تحقیق فعالیت می کند و بازنگری دنیای پناهندگان صفحه ما را به عهده دارد.موسیقی مورد علاقه او Lieblingssong ist Home از Edward Sharpe می باشد.
       julia: او کارشناس زبان آلمانی است.این بدین معنی است که او اطلاعات زیادی در مورد متن های زبان آلمانی دارد.او به خوبی می تواند بنویسد و مسائل  را به راحتی توضیح دهد.در در clarat در تیم تحقیق فعالیت می کند و کارشناس بخش زبان clarat می باشد.موسیقی مورد علاقه او Reckoner از Radiohead می باشد.
       julia_b: او در رشته خدمات اجتماعی تحصیل کرده است و سابقه کار با کودکان و جوانان را دارد.او به خوبی می تواند خود را در شرایط دیگران قرار دهد.در کلارات در تیم تحقیق فعالیت دارد و موسیقی مورد علاقه او Nantes از Beirut می باشد.
-      julian: او کارشناس اقتصاد اجتمایی است.این بدین معنی است که او اطلاعات زیادی در مورد اقتصاد٬ اجتماع و کامپیوتر دارد.در clarat در تیم تحقیق و امور فنی فعالیت می کند.موسیقی مورد علاقه او  ist All You Need از Sublime می باشد.
       juliane: او در رشته مدیریت اجرایی کسب و کار و صنعت توریسم تحصیل کرده است.او به خوبی نقشه طراحی می کند و را حل های خلاقانه ارائه می دهد.در clarat در کار بازاریابی فعالیت می کند.موسیقی مورد علاقه او Easy از The Commodores می باشد.
       karo: او در رشته اروپا شناسی تحصیل کرده است.این بدین معنی است که او در مورد سیاست اروپا اطلاعات زیادی دارد و می تواند خوب سازمان دهی کند.در clarat در تیم تحقیق وکار با کتاب راهنمای ما فعالیت دارد.موسیقی مورد علاقه او  t Alive از Pearl Jam می باشد.
-      katinka: او کارشناس روانشناسی می باشد.این بدین معنی است که او رفتار و احساسات انسانها را به خوبی درک می کند.در clarat در تیم تحقیق فعالیت می کند و او مارا در جستجوی کسیانی که از clarat استفاده می کنند کمک می کند.موسیقی مورد علاقه او Greatest از Cat Power می باشد.
       katja: او کارشناس زبان آلمانی می باشد و در مورد متن های پیچیده و همچنین زبان آلمانی اطلاعات زیادی دارد.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Mysteries از Beth Gibbons می باشد.
       konstantin: او کارشناس٬ برنامه نویس و توسعه دهنده وبسایت است.این بدین معنی است که او به خوبی می تواند صفحات اینترنتی را برنامه نویسی کند و همیشه راه حل های خوبی را ارائه می دهد.در clarat در تیم IT و انجام کارهای صفحه اینرنتی ما فعالیت دارد.موسیقی مورد علاقه او Too Long ز  Daft Punk می باشد.
       laura_i: او کارشناس مسافرتی و مطالعات فرهنگی می باشد.او به خوبی می تواند برنامه ریزی کند.او به بازنگری و در یادگیری چیزهای جدید علاقه زیادی دارد.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Proud Mary از Ike und Tina Turner می باشد.
@@ -1090,14 +1087,15 @@ fa:
       lavinia: او محقق در مورد مسائل جنگ و صلح می باشد.این بدین معنی است که اطلاعات زیادی در مورد تنش و جنگ دارد.او آگاهی زیادی در مورد تفکر دیگران وجلب اعتماد دارد.در clarat در تیم تحقیق و تیم زبان فعالیت دارد.موسیقی مورد علاقه او Lieblingssong ist I'm Not Done از Fever Ray می باشد.
       line: او کارگردان تئاتر می باشد و اطلاعات زیادی در مورد ادبیات و زبان دارد. به همین دلیل از تاثیر لغات بر انسانها آگاهی دارد.در clarat در تیم تحقیق و تیم زبان فعالیت دارد.موسیقی مورد علاقه او Unintended از Muse می باشد.
       lisa: او کارشناس طراحی است و به همراه دیگران در توسعه راه حل های خلاقانه فعالیت می کند.او به خوبی قادر به طراحی است و در clarat در تیم تحقیق و گفتگو با استفاده کنندگان از سایت ما فعال مست.او قادر است دیگران را از نحوه استفاده از clarat آگاه کند.موسیقی مورد علاقه او Resolution از Matt Corby می باشد.
+      magdalena: 
       marcus: او طراح وب است.این بدین معنی است که صفحات اینترنت را برنامه ریزی و می سازد و همچنین به خوبی طرح می ریزد.در clarat در تیم IT فعالیت می کند و مراقب آن است که صفحه اینترنتی ما زیباتر و بهتر جلوه دهد.موسیقی مورد علاقه او Hysteria از MUSE می باشد.
+      marie: 
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
       nathalie: او در رشته حقوق بشر و سیاست بین الملل تحصیل کرده است.او به خوبی مو تواند توضیح دهد و همچنین گوش دهد.در clarat در تیم تحقیق فعالیت دارد.موسیقی مورد علاقه او You از Kings of Convenience می باشد.
-      nicole: |-
-        او در رشته علوم اجتمایی تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و زبان های مختلف دارد.او بدرستی تصمیم می گیرد.او هدایت کننده تیم تحقیق کننده است و موسیقی مورد علاقه او Palabra Mi Amor از
-        Shaka Ponk می باشد.
       nils: او کارشناس علوم کامپیوتر است.این بدین معنی است که او می تواند به خوبی یرنامه های کامپیوتری و صفحات اینترنت را برنامه ریزی کند.او همیشه راه حل مناسب به ذهنش می رسد و سریع یاد می گیرد.در clarat در تیم IT  فعالیت دارد.موسیقی مورد علاقه او Jein از Fettes Brot می باشد.
+      omar: 
+      patrick: 
       philipp: او در رشته تاریخ٬ سیاست و حقوق تحصیل کرده است.او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او his Is Our Science از Astronautalis می باشد.
       sabine: او کارشناس جامعه شناسی است.این بدان معنی است که او اطلاعات زیادی در مورد اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند و قوانین مربوط به پناهندگان را به ما توضیح می دهد.موسیقی مورد علاقه او Vesna از Kino می باشد.
       sophie: او در رشته مدیریت سازمانهای ناسودبر تحصیل کرده است.او به خوبی می تواند سازمان دهی کند و به سرعت تشخیص می دهد که چه چیزی مهم است.در کلارات در تیم تحقیق فعالیت دارد و می داند که چه کسانی و چگونه از کلارات استفاده می کنند.موسیقی مورد علاقه او Lost از Frank Ocean می باشد.
@@ -1256,6 +1254,10 @@ fa:
           family: اگر اینجا را کلیک کنید٬به clarat Family وارد می شوی.در clarat Family می توانی بدنبال کمک برای کودکان٬جوانان و خانواده ها باشی.
           refugees: اگر اینجا را کلیک کنید٬به clarat Refugees وارد می شوید.در clarat Refugees می توانی بدنبال کمک برای پناهندگان باشی.
   simple_form:
+    placeholders:
+      search_form:
+        home:
+          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
