--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -936,14 +936,6 @@ ru:
             рабоатет не правильно? Тогда
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
       nav_lang:
-        languages:
-          ar: 
-          de: 
-          en: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
         legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
@@ -979,6 +971,10 @@ ru:
               family: перейти к <span class="top-bar__emphasis">clarat refugees</span>
               refugees: перейти к к <span class="top-bar__emphasis">clarat family</span>
         title: Автоматический перевод!
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
   offers:
     index:
       filters:
@@ -1110,6 +1106,7 @@ ru:
       amina: Амина - социолог. Она много знает об обществе. Она быстро замечает самое важное. В clarat она работает в команде сбора информации. Она решает, как именно будет clarat помогать. Ее любимая песня - La Prima Estate Эрленда Ойа (Erlend Oye).
       andrea: Андреа изучала международный менеджмент. Она многое знает об экономике и культуре. Она работает очень педантично. В clarat она работает в исследовательской команде. Она следит за качеством работы нашей команды. Ее любимая песня Work Me от The Black Keys.
       anja: ''
+      ann-sophie: 
       anna: Она - филолог. Это значит, что она много знает о языках. Кроме того, она знает толк в литературе. Она хорошо разбирается в сложных вещах. В clarat она работает в исследовательской команде. Её любимая песня - 1009 группы Bonobo.
       anne: Она изучала экономику и международные отношения. Она может очень быстро думать логически. Она главная в clarat. Она заботится о всей команде и все организует. Ее любимая песня - Denken Sie Groß группы Deichkind.
       astrid: Она политолог. Она знает много о политике и обществе. У нее всегда отличное настроение и этим она заражает всех вокруг. В clarat она работает в исследовательской команде. Ее любимая песня - You Got Me группы Рутс.
@@ -1118,9 +1115,11 @@ ru:
       birte: Она изучала педагогику. Она умеет находить общий язык с детьми. И они может поставить себя на место других. Она также много работала со средствами массовой информации. В clarat он находится в исследовательской группе. Её любимая песня - Borderline от Madonna.
       chrissy: Она политолог. Она знает много о политике и обществе. Она хорошо планирует и организовывает.  В clarat она работает в исследовательской команде. В Интернете она ищет разные организации. Ее любимая песня - Rough Hands от Alexisonfire.
       claudia: Ранее она работала в clarat в отделе розничных продаж. Она умеет общаться с людьми и быстро собирать информацию. В Clarat он находится в исследовательской группе. Она продолжает помогать нашим пользователям. Её любимая песня - Chandelier от Sia.
+      damjan: 
       eleonore: Она изучала музыку, средства массовой информации и экономику. Она может быстро собирать и обрабатывать информацию. В Clarat он является частью исследовательской группы. Она занимается тем, чтобы пользователи могли легко отыскать Clarat в Интернете. Её любимая песня Je Veux от Zaz.
       elisa: Элиза - культуролог. Это означает, что она многое знает о культуре. Она может сложные вещи объяснить простыми словами. В clarat она работает в исследовательской команде. Она следит за порядком на нашей веб-страничке. Ее любимая песня - Boat Behind группы Kings of Convenience.
       esther: Она изучала культурологию. Она хорошо знакома с историей и политикой. Она быстро обучается новому. В Clarat он является частью исследовательской команды и заботиться о нашем лексиконе. Её любимая песня - This charming man группы The Smiths.
+      fabian: 
       franziska: Франциска - международный юрист. Она многое знает о законах, которые действительны для всех стран. Она быстро понимает сложные вещи и находит решения. В clarat она работает в команде сбора информации. Ее любимая песня - Explanations певицы из Бельгии Села Сью (Selah Sue)
       hassan: Ранее он работал в качестве устного переводчика персидского языка. Фарси - его родной язык. Он быстрый и хорошо организован. В Clarat он работает в команде переводчиков и переводит Clarat на персидский язык. Его любимая песня -  Looking For The Summer от Chris Rea.
       heading: Что подразумевает clarat
@@ -1136,10 +1135,8 @@ ru:
       jule: Она - исследовательница мирных времен и конфликтов. Это значит, что она много знает о конфликтах и войне. Она хорошо умеет решать проблемы. В clarat она работает в исследовательской команде. Она в курсе событий в странах наших беженцев. Её любимая песня Home исполнителя Edward Sharpe.
       julia: Юлия Германист. Это значит, что она хорошо разбирается в текстах и в немецком языке. Она может хорошо писать у понятно объяснять вещи. В clarat она работает в команде сбора информации и является экспертом по языку clarat. Её любимая песня Reckoner от группы  Рэдиохэд (Radiohead).
       julia_b: Она изучала социальную работу. Она долгое время работала с детьми и подростками. Она умеет ставить себя на место других. В Clarat она работает в исследовательской команде. Её любимая песня - Nantes от Beirut.
-      julian: Юлиан Социальный экономист. Это значит, что он знает много о экономике и обществе. Он хорошо разбирается в компьютерах. В clarat он работает в команде сбора информации и занимается техническими вопросами. Его любимая песня All You Need от Сублим (Sublime).
       juliane: Она изучала управление предприятием и туризм. Она хорошо умеет планировать. И всегда находит креативные решения. В Clarat она следит за маркетингом. Её любимая песня - группы The Commodores.
       karo: Она изучала европейские науки. Следовательно, она знает много о европейской политике. У нее хорошие организаторские способности. В clarat она работает в исследовательской группе и занимается подготовкой нашего справочника. Ее любимая песня — Alive от Pearl Jam.
-      katinka: Она психолог. Это значит, что она хорошо понимает поведение и чувства людей. В clarat она работает в исследовательской группе. И она выясняет, кто пользуется всей системой clarat. Ее любимая песня — The Greatest от Cat Power.
       katja: Она германист. Она хорошо разбирается в сложных текстах и немецком языке. В clarat она работает в исследовательской группе. Ее любимая песня — Mysteries от Beth Gibbons.
       konstantin: 'Константин Интернет-разработчик. Это значит, что он умеет программировать страницы в интернете. Он всегда хорошо разрешает проблемы. В clarat он работает в команде технической инвентаризации. Его любимая песня Too Long от  французской группы Дафт Панк (Daft Punk). '
       laura_i: Она туристический агент и культуролог. У нее хорошие организаторские способности. Она всегда видит общую картину и охотно изучает новые вещи. В clarat она работает в исследовательской группе. Ее любимая песня — Proud Mary от Ike und Tina Turner.
@@ -1147,12 +1144,15 @@ ru:
       lavinia: Она - исследователь мира и конфликтов. Это значит, что она много знает о конфликтах и войне. Она умеет переубеждать людей. В clarat она работает в исследовательской команде, она также является экспертом языка clarat. Её любимая песня - I'm Not Donе от Fever Ray.
       line: " Театральный режиссер. Она хорошо разбирается в литературе и языке. Поэтому она знает, как слова влияют на людей. В clarat она работает в исследовательской группе и является экспертом по clarat-языку. Ее любимая песня — Unintended от Muse."
       lisa: Она специалист по дизайну. Это значит, что она может планировать креативные решения. И прекрасно рисует. В clarat она работает в исследовательской группе и общается с пользователями. Она также выясняет, кто пользуется системой clarat.  Ее любимая песня — Resolution от Matt Corby.
+      magdalena: 
       marcus: Маркус Дизайнер по интернету. Это значит, что он умеет программировать и составлять сайты в интернете. Он тоже хорошо умеет планировать. В clarat он работает в команде технической информации. Он заботится о том, чтобы наш сайт в интернете хорошо выглядел. Его любимая песня Hysteria от группы Мьюз (Muse).
+      marie: 
       michaela: Она изучала экономическую информатику. Она может воодушевлять других людей. И она хорошо разбирается в новых СМИ. В clarat она работает в исследовательской группе и обеспечивает хорошую работу нашего сайта. Ее любимая песня — Digital Love от Daft Punk.
       nahla: Она археолог. Он много знает об истории людей. Он может быстро работать. В clatrat она работает в команде переводчиков и переводит clarat на арабский язык.  Ее любимая песня — Nassam Allina El Hawa от Fayrouz.
       nathalie: Она изучала права человека и международные политические исследования. Она умеет хорошо объяснять. И хорошо слушать. В Clarat она работает в исследовательской команде. Её любимая песня - Me in You от Kings of Convenience.
-      nicole: Николь Изучала межкультурную коммуникацию. Это значит, что она знает много о разных культурах и языках. Она хорошо может принимать решения. В clarat она работает в команде сбора информации. Её любимая песня Palabra Mi Amor от Шака Понк (Shaka Ponk).
       nils: Нильс Специалист по информатике. Это значит, что он хорошо умеет программировать компьютерные программы и сайты в интернете. Он хорошо решает проблемы и быстро осваивает новые вещи. В clarat он работает команде технической информации. Его любимая песня Jein от группы Фэттэс Брот (Fettes Brot).
+      omar: 
+      patrick: 
       philipp: Имеет истории, политики и права исследований. Он много знает о политике и обществе. Он может понять сложные вещи. В Clarat он находится в исследовательской группе. Его любимая песня This Is Our Наука Astronautalis.
       sabine: Является ли социолог. То есть, они знают много о компании. Вы можете понять сложные вещи. В Clarat он находится в исследовательской группе. И она объясняет немецкий закон о предоставлении убежища. ее любимая песня Vesna Kino.
       sophie: Имеет Некоммерческая управления изучены. Вы можете организовать быстро и хорошо понимают, что важно. В Clarat он находится в исследовательской группе. И она узнает, кто Clarat таких видов применения. Моя любимая песня утрачивается Frank океана.
@@ -1358,6 +1358,10 @@ ru:
           family: Если ты нажмешь сюда, то перейдешь к clarat Family. В clarat Family ты найдешь помощь для детей, молодежи и семей.
           refugees: Если ты нажмешь сюда, то перейдешь к clarat Refugees. В clarat Refugees ты найдешь помощь для беженцев.
   simple_form:
+    placeholders:
+      search_form:
+        home:
+          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
