--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -877,14 +877,6 @@ en:
           If you are interested, please enter your email and we will reach out
           to you once as soon as that is the case.
       nav_lang:
-        languages:
-          ar: 
-          de: 
-          en: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
         legal_title: On clarat, legal text can only be read in German.
         title: |-
           Automated translations!
@@ -919,6 +911,10 @@ en:
               family: switch to <span class="top-bar__emphasis">clarat refugees</span>
               refugees: switch to <span class="top-bar__emphasis">clarat family</span>
         title: Automated translations!
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
   offers:
     index:
       filters:
@@ -1054,6 +1050,7 @@ en:
         about economics and culture. She's a precise worker. At
         clarat she is part of the research team. She keeps an eye on everything that happens in the clarat family world. Her favourite song is “Work Me” by The Black Keys.
       anja: Anja is an ecologist and engineer. She can think quickly and logically. She works in clarat's research team, She ensures the quality of our work. Her favourite song is "Where is my My Mind?" by the Pixies.
+      ann-sophie: 
       anna: Anna is a philologist. That means she knows a lot about languages. And she knows a lot about literature, too. She can understand complicated ideas very well. At clarat she's in the research team. Her favourite song is "1009" by Bonobo
       anne: |-
         Anne studied economics and international relations. She's a quick,
@@ -1077,6 +1074,7 @@ en:
       birte: Birte studied educational science. She knows a lot about children. And she's very good at putting herself in other people's shoes. And she's worked a lot with media. At clarat, she's in the research team. "Borderline" by Madonna is her favourite song.
       chrissy: Chrissy is a political scientist. That means she knows a lot about society and politics. And she's good at planning and organizing things. At clarat, she's in the research team. She uses the internet to look for organizations. Her favourite song is "Rough Hands" by Akexisonfire.
       claudia: Before coming to clarat, Claudia worked in retail. She's good at dealing with people. And finding information as quickly as possible. She's in clarat's research team. She helps people find help. Her favourite song is "Chandelier" by Sia.
+      damjan: 
       eleonore: Eleonore studied music, media and business studies. She can find and process information very quickly. She's in clarat's research team. It's her job to make sure people can find clarat easily online. Her favourite song is "Je Veux" by Zaz.
       elisa: |-
         Elisa is an expert on cultural studies. That means she knows a lot
@@ -1084,6 +1082,7 @@ en:
         clarat she is part of the research team. And she makes sure our website is looking good. Her favourite song is “Boat Behind" by Kings of
         Convenience.
       esther: Esther studied cultural studies. She knows a lot about history and politics. She is always learning new things. At clarat she's in the research team. She's in charge of our special clarat dictionary. Her favourite song is "This Charming Man" from The Smiths.
+      fabian: 
       franziska: |-
         Franziska studied international law. That means she knows a lot about
         laws that apply to lots of different countries. She can understand complicated
@@ -1121,17 +1120,8 @@ en:
         expert on our clarat language. Her favorite song is “Reckoner” by
         Radiohead.
       julia_b: Julia studied Social Work. And she's already done a lot of work with children and young adults. She can relate to others easily. She's in clarat's research team. Her favourite song is "Nantes" by Beirut.
-      julian: |-
-        Julian studied social economics. That means he knows a lot about the
-        economy and society. He is also good with computers. At clarat he is
-        part of the research team and takes care of technical issues. His
-        favorite song is “All You Need” by Sublime.
       juliane: Juliane studied business adminstration and tourism. She's very good at planning. And finding creative solutions. She's in charge of marketing at clarat. Her favourite song is "Easy" by The Commodores.
       karo: Karo studied European studies. That means she knows a lot about European politics. She is good at organizing things. She's part of the clarat research team. And she is in charge of our handbook. Her favourite song is "Alive" from Pearl Jam.
-      katinka: |-
-        Katinka is a psychologist. That means she has a good understanding of
-        people’s behaviour and feelings. At clarat she is part of the research team. And she finds out about the people using clarat. Her
-        favourite song is “The Greatest” by Cat Power.
       katja: Katja studied German. She is good at reading complicated texts. And she's good at German, too. She's in the clarat research team. Her favourite song is Mysteries by Beth Gibbons.
       konstantin: |-
         Konstantin is a web developer, which means he knows how to program
@@ -1155,24 +1145,23 @@ en:
       lisa: |-
         Lisa is a design thinker. That means she knows how to plan
         projects creatively. At clarat she is part of the research team, where she takes care of our users. She also tries to find out who our users are. Her favourite song is "Resolution" by Matt Corby.
+      magdalena: 
       marcus: |-
         Marcus is a web designer. This means he's good at programming and
         designing websites. He's also a good planner. At clarat he is part of
         the IT team. He ensures that our website looks good. His favourite song
         is “Hysteria” by MUSE.
+      marie: 
       michaela: Michaela studied commercial information technology. She's good at inspiring others. And she knows a lot about the media. She's part of the clarat research team. And she also makes sure our website is working properly. Her favourite song is "Digital Love" by Daft Punk.
       nahla: Nahla is an archaeologist. She knows a lot about human history. She can work very quickly. She's in the clarat translator team. She translates clarat into Arabic.  Her favourite song ist "Nassam Allina El Hawa" by Fayrouz.
       nathalie: Nathalie studied human rights and international politics. She can explain things well. And she's a good listener, too. She's part of the clarat research team. Her favourite song is "Me in You" by Kings of Convenience.
-      nicole: |-
-        Nicole studied intercultural communications, which means she knows a lot
-        about cultures and language. She is good at making decisions. She is the
-        head of the research team. Her favourite song is “Palabra Mi Amor” by
-        Shaka Ponk.
       nils: |-
         Nils is a computer scientist, which means he knows how to program
         computer programs and websites. He always comes up with good solutions
         and is a fast learner. At clarat he is part of the IT team. His favourite
         song is “Jein” by Fettes Brot.
+      omar: 
+      patrick: 
       philipp: Philipp studied history, politics and law. He knows a lot about society and politics. He can understand complicated things. He's part of the clarat research team. His favourite song is "This is our Science" by Astronautalis.
       sabine: Sabine is a sociologist. That means she knows a lot about society. She can understand complicated things very well. At clarat, she's in the research team. She explains the asylum laws in Germany to us. Her favourite song is "Vesna" by Kino.
       sophie: Sophie studied Non-profit Management. She's a very organized person. And she's good at recognizing what's important. She's in clarat's research team. She's trying to find out who is using clarat and how they're using it. Ger facourite song is "Lost" from Frank Ocean.
@@ -1405,6 +1394,10 @@ en:
           family: Click here to get to clarat family. In clarat family, you can search for help and support offerings for children, adolescents and families.
           refugees: Click here to get to clarat refugees. In clarat refugees, you can search for help and support offerings for refugees.
   simple_form:
+    placeholders:
+      search_form:
+        home:
+          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
