--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -975,6 +975,7 @@ de:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -1224,6 +1225,7 @@ de:
         msa: Malaiisch – بهاس ملايو
         mul: weitere Sprachen auf Anfrage
         nor: Norwegisch - Norsk
+        pan: Panjabi - پنجابی / ਪੰਜਾਬੀ
         pol: Polnisch - polski
         por: Portugiesisch - português
         pus: Paschtu - پښتو‎
