--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -572,6 +572,7 @@ en:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -796,6 +797,7 @@ en:
         msa: Malay – بهاس ملايو
         mul: more languages upon request
         nor: Norwegian - Norsk
+        pan: Punjabi - پنجابی / ਪੰਜਾਬੀ
         pol: Polish - polski
         por: Portuguese - português
         pus: Pashto - پښتو‎
