--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -605,6 +605,7 @@ fr:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -829,6 +830,7 @@ fr:
         msa: Malais – بهاس ملايو
         mul: autres langues sur demande
         nor: Norvégien - Norsk
+        pan: Pendjabi - پنجابی / ਪੰਜਾਬੀ
         pol: Polonais - polski
         por: Portugais - português
         pus: Pachto - پښتو‎
